Obrazki nowe podzielone i inne

--- a/thesis/06-4-Logika-LW.tex
+++ b/thesis/06-4-Logika-LW.tex
@@ -5,11 +5,21 @@ Jednym z zadań w ramach pracy było zaprogramowanie odpowiedniej logiki bizneso
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figures/lw/backend.pdf} 
+\includegraphics[width=0.8\textwidth]{figures/lw/backend1.pdf} 
 \end{center}
-\caption{Struktura back-end'u}
-\label{fig:back-end}
+\caption{Struktura back-end'u (1)}
+\label{fig:back-end1}
 \end{figure}
+
+\newpage
+\begin{figure}[H]
+\begin{center}
+\includepdf{figures/lw/backend2.pdf} 
+\end{center}
+\caption{Struktura back-end'u (2)}
+\label{fig:back-end2}
+\end{figure}
+\newpage
 
 \subsection{Raporty}
 Raporty wykonano korzystając z platformy JasperReports, wykorzystując następujące produkty firmy \emph{Jaspersoft}:
