--- a/thesis/07Jakosc.tex
+++ b/thesis/07Jakosc.tex
@@ -18,15 +18,25 @@ Przy realizacji pierwszego wydania, za testy jednostkowe w pełni odpowiadał je
 
 Na początku projektu przygotowaliśmy program w języku Java uruchamiający zestaw testów akceptacyjnych. W drugim wydaniu korzystaliśmy już wyłącznie z Selenium IDE, ze względu możliwość szybszego rozpoznania problemów z poziomu przeglądarki, w przeciwieństwie do terminala.
 
+\newpage
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figures/lw/tests.pdf} 
+\includepdf{figures/lw/tests1.pdf} 
 \end{center}
-\caption{Struktura klas testujących}
-\label{fig:tests}
+\caption{Struktura klas testujących (1)}
+\label{fig:tests1}
 \end{figure}
+\newpage
+\begin{figure}[H]
+\begin{center}
+\includepdf{figures/lw/tests2.pdf} 
+\end{center}
+\caption{Struktura klas testujących (2)}
+\label{fig:tests2}
+\end{figure}
+\newpage
 
-Na diagramie widzimy trzy klasy służące do testowania, z których dziedziczą wszystkie inne, są to:
+Na diagramach widzimy trzy klasy służące do testowania, z których dziedziczą wszystkie inne, są to:
 \begin{itemize}
 \item \emph{basic\_testcase} -- podstawowe testy jednostkowe
 \item \emph{advanced\_testcase} -- testy z użyciem bazy danych
