--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -39,11 +39,11 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 \item Redakcja całej pracy, włącznie z częściami pozostałych autorów
 \item Pozyskanie, przetworzenie i zamieszczenie materiałów zewnętrznych
 \item Pozyskanie, przetworzenie i zamieszczenie materiałów pochodzących od zespołu zarządzającego
-\item Rozdział 1 - Wprowadzenie
-\item Rozdział 7 - Zapewnianie jakości i konserwacja systemu
-\item Rozdział 6.2.11 - Testy jednostkowe i akceptacyjne
-\item Rozdział 8 - Wnioski - część własna
-\item Rozdział 9 - Zakończenie
+\item Rozdział 1 -- Wprowadzenie
+\item Rozdział 7 -- Zapewnianie jakości i konserwacja systemu
+\item Rozdział 6.2.11 -- Testy jednostkowe i akceptacyjne
+\item Rozdział 8 -- Wnioski - część własna
+\item Rozdział 9 -- Zakończenie
 \item Dodatki
 \end{itemize}
 \noindent
@@ -51,27 +51,30 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 \item Maciej Trojan
 
 \begin{itemize}
-\item Rozdział 6.2.3; 6.2.4 - Napotkane problemy i ich rozwiązania - Inicjalizacja bazy danych; Inicjalizacja modułu
-\item Rozdział 6.3.11 - Użyte technologie - JavaScript
-\item Rozdział 8 - Wnioski - część własna
+\item Rozdział 6.2.3; 6.2.4 -- Napotkane problemy i ich rozwiązania -- Inicjalizacja bazy danych; Inicjalizacja modułu
+\item Rozdział 6.3.11 -- Użyte technologie - JavaScript
+\item Rozdział 8 -- Wnioski - część własna
 \end{itemize}
 \noindent
 
 \item Krzysztof Urbaniak
 
 \begin{itemize}
-\item Rozdział 6.2.5-10 - Napotkane problemy i ich rozwiązania - Formularze; Role; Formater kursu; Tworzenie badania; Tworzenie ankiety; Hierarchia CSS
-\item Rozdział 6.5 - Interfejs
-\item Rozdział 6.7 - Powiązanie logiki z interfejsem
-\item Rozdział 8 - Wnioski - część własna
+\item Rozdział 6.2.5-10 -- Napotkane problemy i ich rozwiązania - Formularze; Role; Formater kursu; Tworzenie badania; Tworzenie ankiety; Hierarchia CSS
+\item Rozdział 6.5 -- Interfejs
+\item Rozdział 6.7 -- Powiązanie logiki z interfejsem
+\item Rozdział 8 -- Wnioski - część własna
 \end{itemize}
 \noindent
 
 \item Łukasz Wieczorek
 
 \begin{itemize}
-\item Rozdział 6.3.1-10 - Użyte technologie - Moodle, PHP, PHPUnit, Selenium, PostgreSQL,Eclipse IDE, SVN, Redmine, JasperReports, JetBrains PhpStorm
-\item Rozdział 8 - Wnioski - część własna
+\item Rozdział 6.2.12 -- Mapowanie obiektowo-relacyjne
+\item Rozdział 6.3.1-10 -- Użyte technologie - Moodle, PHP, PHPUnit, Selenium, PostgreSQL,Eclipse IDE, SVN, Redmine, JasperReports, JetBrains PhpStorm
+\item Rozdział 6.6 -- Logika (back-end)
+\item Rozdział 7.1.2 -- Testy jednostkowe
+\item Rozdział 8 -- Wnioski - część własna
 \end{itemize}
 \noindent
 
