--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -1,4 +1,3 @@
-
 % Szkielet dla pracy inżynierskiej pisanej w języku polskim.
 
 \documentclass[polish,bachelor,a4paper,oneside]{ppfcmthesis}
@@ -13,6 +12,7 @@
 \usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{multirow}
+\usepackage{pdfpages}
 
 \hyphenation{roz-sze-rza-ją-cych}
 
@@ -25,7 +25,6 @@
 \title{iQuest -- system rozszerzonych ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
 \ppsupervisor{dr hab.~inż.~Bartosz Walter} % Your supervisor comes here.
 \ppyear{2013}                                         % Year of final submission (not graduation!)
-
 
 \begin{document}
 
